--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                  <button id="button">HIRE US TODAY</button>
             </div>
             <div id="min2">
-                <img src="image/Developer.svg">
+                <img src="Developer.svg">
             </div>
         </div>
         <div id="main">
@@ -55,7 +55,7 @@
                 <button id="button">LEARN How</button>
             </div>
             <div>
-                <img src="image/why.svg" width="400px" height="420px">
+                <img src="why.svg" width="400px" height="420px">
             </div>
           </div>
           <div id="step4">
@@ -72,22 +72,22 @@
                 <div id="mincontainer1">
                     <h4 class="minh1">Delivery Services</h4>
                     <p>Offering fast and dependable delivery <br>solutions tailored to your <br>logistics needs</p>
-                    <img src="image/web_design.svg" width="260px">
+                    <img src="web_design.svg" width="260px">
                 </div>
                 <div id="mincontainer2">
                     <h4 class="minh2">Car Hire</h4>
                     <p>Providing a wide range of <br> vehicles for hire, suitable for <br>both short-term rentals and <br>long-term leases.</p>
-                    <img src="image/web_maintenance.svg" width="260px">
+                    <img src="web_maintenance.svg" width="260px">
                 </div>
                 <div id="mincontainer3">
                     <h4 class="minh3">General Contract</h4>
                     <p>Delivering professional <br> general    contracting<br> services across various<br> industries and projects.</p>
-                    <img src="image/Designer _Flatline.svg" width="260px">
+                    <img src="Designer _Flatline.svg" width="260px">
                 </div>
             </div>
           </div>
           <div id="step3">
-            <img src="image/fast.svg">
+            <img src="fast.svg">
             <div>
                 <h1>Timely delivery</h1>
                 <p>Asides focusing on building efficient, user-<br>friendly apps we are pretty mindful of time. Get<br> your projects at the stipulated time!</p>
@@ -101,7 +101,7 @@
           
           <div id="step3">
             <div>
-                <img src="image/web_design (2).svg" width="400px" height="500px">
+                <img src="web_design (2).svg" width="400px" height="500px">
             </div>
             <div>
                 <h1>we design just what's<br> best for you!</h1>
@@ -140,7 +140,7 @@
                   <button id="button">CONTACT US</button>
               </div>
               <div>
-                  <img src="image/customer_support.svg" width="400px">
+                  <img src="customer_support.svg" width="400px">
               </div>
             </div>
           </div>
