--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="main">
           <div id="step2">
             <div>
-                <img src="image/team_work.svg" width="400px" height="420px">
+                <img src="team_work.svg" width="400px" height="420px">
             </div>
             <div>
                 <h2>Certified Team of <br>
